# iOS_to_AI_plane

./: README.md
PythonCode/: README.md
PythonCode/day01/FastAPIDemo/: demo1.py
PythonCode/day01/student_manager/: .gitignore  Dockerfile  database.py  main.py  models.py  requirements.txt
PythonCode/day02/SQLAlchemyDemo/: demo.py  demo1.py  demo2.py
PythonCode/day03/asynchronism_and_concurrency_demo/: demo1.py  demo2.py
PythonCode/day09/fastapi-docker/: Dockerfile  pyproject.toml
PythonCode/day09/fastapi-docker/.workbuddy/memory/: 2026-04-20.md
PythonCode/day09/fastapi-docker/app/: main.py
PythonCode/day10/ttd_demo/: test_async.py  test_database.py  test_dependency_override.py  test_fastapi_basic.py  test_harness_best_practices.py  test_harness_driver.py  test_harness_mock.py  test_harness_stub.py  test_mock.py
PythonCode/day11/ai-api-use-demo/: .env  async_use.py  challenge.ipynb  demo1.py  demo3.py  demo4.py  deomo2.py  estimate.py  experiment.py  question.py  retry_use.py  use_qianwen.py  use_wenxin.py  问题.md
PythonCode/day12/api_use_advance/: conversation.py  conversation_segregate.py  function_calling.py  homework.db  homework_checker.py  sse_demo.py
PythonCode/day13/basic-prompt/: .gitignore  demo.py  langchain_templete.py  template.py
PythonCode/day15/optimize/: qwen_optomize.py  token_budget.py
PythonCode/day16/state/: pipeline.py  state_demo.py  state_pipeline.py
PythonCode/day17/state-pro/: demo1.py  demo2.py  dialog.py  guard.py
PythonCode/day18/window/: compare.py  conversations.db  demo.py  session.py  test.db  (+1 more)
iOSCode/: README.md
(+39 files in other folders)
